--- a/src/App.css
+++ b/src/App.css
@@ -36,3 +36,21 @@
     transform: rotate(360deg);
   }
 }
+.image {
+  background-image: url("./images/download.jpg");
+  background-size: "cover";
+  background-color: red;
+  object-fit: cover;
+  height: 100vh;
+  margin-top: 0px;
+  width: 100wh;
+  background-repeat: no-repeat;
+}
+/* .bgimg {
+  background-image: linear-gradient(rgba(0, 0, 0, 0.7), rgba(0, 0, 0, 0.7)),
+    url("./images/download.jpeg");
+  background-size: 100% 100%;
+  background-attachment: fixed;
+  width: 100%;
+  height: 800px;
+} */
